|-- FIXED -| Missing padding on .section-header

--- a/0x02-CSS_advanced/styles/17-style.css
+++ b/0x02-CSS_advanced/styles/17-style.css
@@ -428,6 +428,7 @@ template {
 
 .section-header {
   text-align: var(--section-header-align);
+  padding: var(--section-body-padding);
 }
 
 .section-body {
@@ -456,7 +457,8 @@ template {
 
 .container {
   width: 960px;
-  margin: 0 auto 0 auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .footer {
